# sentimen-chromebook-nadiem

./: .gitattributes  .gitignore  DECISIONS.md  MODEL_CARD.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
app/: app.py  awan_kata.py  data.py  grafik.py  komponen.py  tema.py
data/labels/: gold.parquet  gold_pass1_b01.csv  gold_pass1_b02.csv  gold_pass1_b03.csv  gold_pass1_b04.csv  gold_pass1_b05.csv  gold_pass1_b06.csv  gold_pass1_b07.csv  gold_pass1_b08.csv  gold_pass1_b09.csv  gold_pass1_b10.csv  gold_todo.csv  silver.parquet  silver_todo.csv  test.parquet  train.parquet  val.parquet
data/processed/: profil.json  skor.parquet
dataset/: DON94SnAD_0.csv  DTVFd_Rk-KJ.csv  DUdN5deExTD.csv  DX8xO2EDutM.csv  DYR3czaxB9E.csv  DYSQkY4RX2K.csv  DYmUwyLEbx9.csv  DaM_18rj5OO.csv  DaNC_lKSytw.csv  DaR6fCMxfe-.csv  Dao9wWaDKzY.csv
flowchart/: README.md
flowchart/src/: flowlib.py  gen.py  gen_insight.py
models/sentimen-id/: config.json  meta.json
reports/: evaluasi.json  temuan.json
skills/design-system/: SKILL.md
skills/id-text-cleaning/: SKILL.md
skills/model-eval/: SKILL.md
skills/sentiment-labeling-id/: SKILL.md
space/: README.md  app.py  requirements.txt
space/nadiem_sentimen/: __init__.py  inference.py  normalisasi.py
src/nadiem_sentimen/: __init__.py  anotator_llm.py  assemble_training.py  baseline_tfidf.py  evaluasi.py  (+12 more)
src/nadiem_sentimen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_anotator.py  test_heuristik_topik.py  test_ingest.py  test_normalisasi.py
