[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nadiem-sentimen"
version = "0.1.0"
description = "Analisis sentimen wacana publik kasus pengadaan Chromebook (komentar Instagram)"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
